# tauri-xcompile-for-win

./: .gitignore  Dockerfile  LICENSE  README.md  angular.json  package-lock.json  package.json
.claude/: settings.json
.devcontainer/: devcontainer.json  post.sh
.github/workflows/: basic-check.yml  manual-build-release.yml  publish-docker-image.yml
scripts/: generate-license.sh  tauri-build.sh
src/: index.html  styles.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: app.config.ts  app.html  app.scss  app.spec.ts  app.ts
